# lameboy

./: .gitignore  Cargo.toml  Readme.md  git-gud.sh
.githooks/: pre-commit
config/: log4rs.yml
src/: joypad.rs  lameboy.rs  main.rs
src/cart/: mod.rs
src/cart/debug/: mod.rs
src/cpu/: instructions.rs  interrupts.rs  mod.rs  registers.rs
src/cpu/debug/: mod.rs  registers.rs  stack.rs
src/dis/: instructions.rs  memory_locations.rs  mod.rs
src/gui/: imgui_debug_state.rs  imgui_debuggable.rs  imguidebug.rs  memoryeditor.rs  mod.rs
src/lameboy/: joypad.rs  mod.rs
src/lameboy/cart/: mod.rs
src/lameboy/cart/debug/: mod.rs
src/lameboy/cart/mbc/: mod.rs  nombc.rs
src/lameboy/cpu/: instructions.rs  interrupts.rs  mod.rs  registers.rs
src/lameboy/cpu/debug/: mod.rs  registers.rs  stack.rs
src/lameboy/cpu/instructions/: alu.rs  bit_opcodes.rs  calls.rs  eight_bit_alu.rs  eight_bit_loads.rs  jumps.rs  misc.rs  mod.rs  restarts.rs  returns.rs  rotates_and_shifts.rs  sixteen_bit_alu.rs  sixteen_bit_loads.rs  stack.rs
src/lameboy/cpu/instructions/alu/: add.rs  and.rs  compare.rs  increment_decrement.rs  mod.rs  or.rs  rotate.rs  shift.rs  sub.rs  swap.rs  xor.rs
src/lameboy/debug/: about.rs  breakpoints.rs  emulator.rs  menu.rs  mod.rs
src/lameboy/mmu/: mod.rs
src/lameboy/mmu/debug/: disassembly.rs  hexdump.rs  mod.rs
src/lameboy/ppu/: gpu.rs  mod.rs  sprite.rs  tile.rs
src/lameboy/ppu/debug/: mod.rs  oam.rs  registers.rs
src/mbc/: mod.rs
src/mmu/: mmuobject.rs  mod.rs
src/mmu/debug/: disassembly.rs  hexdump.rs  mod.rs
src/ppu/: gpu.rs  mod.rs  palette.rs  registers.rs  sprite.rs  tile.rs
src/ppu/debug/: mod.rs  oam.rs  registers.rs
