[package]
name = "lameboy"
version = "0.1.0"
authors = ["Nick Palmer <nick@palmr.co.uk>"]
description = "Yet another Game Boy emulator"
readme = "Readme.md"
homepage = "https://github.com/palmr/lameboy"
repository = "https://github.com/palmr/lameboy"
license = "MIT"

[dependencies]
clap = "~2.33"
bitflags = "~1.1"
nalgebra = "~0.18"
log = "~0.4"
log4rs = "~0.8"

imgui = "0.2"
imgui-glium-renderer = { version = "0.2" }
imgui-winit-support = { version = "0.2" }
glium = { version = "0.25", default-features = true }
