[package]
name = "lameboy"
version = "0.1.0"
authors = ["Nick Palmer <nick@palmr.co.uk>"]
description = "Yet another Game Boy emulator"
readme = "Readme.md"
homepage = "https://github.com/palmr/lameboy"
repository = "https://github.com/palmr/lameboy"
license = "MIT"

[dependencies]
clap = "~2.33"
bitflags = "~1.2"
nalgebra = "~0.21"
log = "~0.4"
log4rs = "~0.12"

imgui = "0.4"
imgui-glium-renderer = { version = "0.4" }
imgui-winit-support = { version = "0.4" }
glium = { version = "0.27", default-features = true }
