[package]
name = "lameboy"
version = "0.1.0"
authors = ["Nick Palmer <nick@palmr.co.uk>"]
description = "Yet another Game Boy emulator"
readme = "Readme.md"
homepage = "https://github.com/palmr/lameboy"
repository = "https://github.com/palmr/lameboy"
license = "MIT"

edition = "2021"

[dependencies]
clap = { version = "~4.1", features = ["derive"] }
bitflags = "~1.3"
nalgebra = "~0.32"
log = "~0.4"
log4rs = "~1.2"

imgui = "0.10.0"
imgui-glium-renderer = { version = "0.10.0" }
imgui-winit-support = { version = "0.10.0" }
glium = { version = "0.32.1", default-features = true }
